--- a/nativeDojoApp/platforms/ios/nativeDojoApp/app/tabs/browse/browse.component.html
+++ b/nativeDojoApp/platforms/ios/nativeDojoApp/app/tabs/browse/browse.component.html
@@ -5,4 +5,6 @@ Feel free to customize layouts and components to change how the tab view looks.
 <GridLayout class="page page-content" columns="*" rows="*,*,*,*,*,*">    
     <Button col="0" row="0" class="btn btn-primary"  text="ListView Example" (tap)="onListViewClick()"></Button>
     <Button col="0" row="1" class="btn btn-primary"  text="NS Audio Example" (tap)="onNSAudioClick()"></Button>
+    <Button col="0" row="2" class="btn btn-primary"  text="Native API Example" (tap)="onNativeAPIClick()"></Button>    
+    <Button col="0" row="3" class="btn btn-primary"  text="Modal Example" (tap)="onModalClick()"></Button>    
 </GridLayout>
